minor change in saveText method